[gd_scene load_steps=7 format=3 uid="uid://c228k2luxvtmu"]

[ext_resource type="Texture2D" uid="uid://chun310c4qe5j" path="res://sprites/ship/assets/shipsMiscellaneous_sheet.png" id="1_hl6ok"]
[ext_resource type="Script" path="res://sprites/ship/Ship.gd" id="1_s0t5k"]
[ext_resource type="Script" path="res://sprites/ship/ShipAttackArea.gd" id="4_h4j50"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wjl3t"]
radius = 15.0
height = 62.0

[sub_resource type="CircleShape2D" id="CircleShape2D_nsln1"]
resource_local_to_scene = true
radius = 900.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dfqox"]
radius = 250.0

[node name="Ship" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_s0t5k")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
texture = ExtResource("1_hl6ok")
region_enabled = true
region_rect = Rect2(204, 345, 66, 113)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
shape = SubResource("CapsuleShape2D_wjl3t")

[node name="FollowArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea2D"]
shape = SubResource("CircleShape2D_nsln1")
debug_color = Color(0.615686, 0.513726, 0.168627, 0.235294)

[node name="AttackRangeArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea2D"]
shape = SubResource("CircleShape2D_dfqox")
debug_color = Color(0.929412, 0.25098, 0.211765, 0.117647)

[node name="AttackArea2D3" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
input_pickable = false
monitorable = false
script = ExtResource("4_h4j50")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea2D3"]
polygon = PackedVector2Array(-16, 14, -241, 64, -249, -2, -241, -63, -14, -16)

[node name="AttackTimer" type="Timer" parent="AttackArea2D3"]
autostart = true

[node name="AttackArea2D2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
input_pickable = false
monitorable = false
script = ExtResource("4_h4j50")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea2D2"]
polygon = PackedVector2Array(-11, 42, -62, 241, -2, 250, 64, 240, 11, 43)

[node name="AttackTimer" type="Timer" parent="AttackArea2D2"]
autostart = true

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
input_pickable = false
monitorable = false
script = ExtResource("4_h4j50")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AttackArea2D"]
polygon = PackedVector2Array(11, -16, 241, -62, 252, -2, 241, 64, 10, 16)

[node name="AttackTimer" type="Timer" parent="AttackArea2D"]
autostart = true

[node name="FollowTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 70.0
time_horizon_obstacles = 0.25
max_speed = 1000.0
debug_enabled = true
